# rust-dev-server

./: .env  .gitignore  Cargo.toml  README.md  build.sh  dev.sh
public/: index.html
src/: config.rs  handlers.rs  main.rs
src/middleware/: request_id.rs
